// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration:: enter authenticator app code following a validation error it should not include link to change security codes where account recovery is not permitted 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should include the correct link to change/reset mfa methods when the user has 1 mfaMethods 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should include the correct link to change/reset mfa methods when the user has 1 mfaMethods 2`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should include the correct link to change/reset mfa methods when the user has 2 mfaMethods 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return enter authenticator app security code with reauth analytics properties 1`] = `
Object {
  "contentId": "6e5cc49f-4770-4089-8547-06149e0f59b1",
  "taxonomyLevel1": "accounts",
  "taxonomyLevel2": "re auth",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return enter authenticator app security code with sign in analytics properties 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return error when csrf not present 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return validation error when code entered contains letters 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return validation error when code is greater than 6 characters 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return validation error when code is less than 6 characters 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return validation error when code not entered 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: enter authenticator app code should return validation error when incorrect code entered 1`] = `
Object {
  "contentId": "89461417-df3f-46a8-9c37-713b9dd78085",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
